namespace java com.booktion.thrift

enum AdvertType {
    FIX_PRICE = 0,
    AUCTION = 1,
}
